version/0.4/_sources/examples/gallery_examples/gallery/index.rst.txt


.. _sphx_glr_examples_gallery_examples_gallery:

Examples
========
These examples show how to use PyPrimeMesh to prepare meshes.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Summary: This example demonstrates how to use topology-based connection to generate conformal s...">

.. only:: html

  .. image:: /examples/gallery_examples/gallery/images/thumb/sphx_glr_01_bracket_scaffold_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_gallery_01_bracket_scaffold.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Meshing a mid-surfaced bracket for a structural analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Summary: This example demonstrates how to mesh a mixing elbow for a flow analysis.">

.. only:: html

  .. image:: /examples/gallery_examples/gallery/images/thumb/sphx_glr_02_lucid_mixing_elbow_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_gallery_02_lucid_mixing_elbow.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Meshing a mixing elbow for a flow analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Summary: This example demonstrates how to mesh a pipe T-section for both structural thermal and...">

.. only:: html

  .. image:: /examples/gallery_examples/gallery/images/thumb/sphx_glr_03_lucid_pipe_tee_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_gallery_03_lucid_pipe_tee.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Meshing a pipe T-section for structural thermal and fluid flow analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Summary: This example demonstrates how to wrap a toy car for a flow analysis.">

.. only:: html

  .. image:: /examples/gallery_examples/gallery/images/thumb/sphx_glr_04_lucid_toy_car_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_gallery_04_lucid_toy_car.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Wrapping a toy car for a flow analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Summary: This example demonstrates how to mesh a printed circuit board with mainly hexahedral e...">

.. only:: html

  .. image:: /examples/gallery_examples/gallery/images/thumb/sphx_glr_05_pcb_stacker_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_gallery_05_pcb_stacker.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Meshing a PCB for structural thermal analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Summary: This example demonstrates how to morph a structural hexahedral mesh of a turbine blade...">

.. only:: html

  .. image:: /examples/gallery_examples/gallery/images/thumb/sphx_glr_06_blade_morph_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_gallery_06_blade_morph.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Morphing a hexahedral mesh of a turbine blade to a new shape</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Summary: This example showcases the process of generating a mesh for a generic F1 rear wing STL...">

.. only:: html

  .. image:: /examples/gallery_examples/gallery/images/thumb/sphx_glr_08_lucid_generic_f1_rear_wing_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_gallery_08_lucid_generic_f1_rear_wing.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Meshing a generic F1 car rear wing for external aero simulation</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/gallery_examples/gallery/01_bracket_scaffold
   /examples/gallery_examples/gallery/02_lucid_mixing_elbow
   /examples/gallery_examples/gallery/03_lucid_pipe_tee
   /examples/gallery_examples/gallery/04_lucid_toy_car
   /examples/gallery_examples/gallery/05_pcb_stacker
   /examples/gallery_examples/gallery/06_blade_morph
   /examples/gallery_examples/gallery/08_lucid_generic_f1_rear_wing

