version/0.9/_sources/examples/gallery_examples/gallery/index.rst.txt


.. _sphx_glr_examples_gallery_examples_gallery:

Examples
========
These examples show how to use PyPrimeMesh to prepare meshes.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Summary: This example shows how mesh and geometry formats are converted during import and export.">

.. only:: html

  .. image:: /examples/gallery_examples/gallery/images/thumb/sphx_glr_00_lucid_file_IO_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_gallery_00_lucid_file_IO.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Convert data when importing and exporting mesh and CAD formats</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Summary: This example demonstrates how to use topology-based connection to generate conformal surface mesh.">

.. only:: html

  .. image:: /examples/gallery_examples/gallery/images/thumb/sphx_glr_01_bracket_scaffold_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_gallery_01_bracket_scaffold.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Mesh a mid-surfaced bracket for a structural analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Summary: This example demonstrates how to mesh a mixing elbow for a flow analysis.">

.. only:: html

  .. image:: /examples/gallery_examples/gallery/images/thumb/sphx_glr_02_lucid_mixing_elbow_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_gallery_02_lucid_mixing_elbow.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Mesh a mixing elbow for a flow analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Summary: This example demonstrates how to mesh a pipe T-section for both structural thermal and fluid flow simulation.">

.. only:: html

  .. image:: /examples/gallery_examples/gallery/images/thumb/sphx_glr_03_lucid_pipe_tee_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_gallery_03_lucid_pipe_tee.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Mesh a pipe T-section for structural thermal and fluid flow analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Summary: This example demonstrates how to wrap a toy car for a flow analysis.">

.. only:: html

  .. image:: /examples/gallery_examples/gallery/images/thumb/sphx_glr_04_lucid_toy_car_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_gallery_04_lucid_toy_car.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Wrap a toy car for a flow analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Summary: This example demonstrates how to mesh a printed circuit board with mainly hexahedral elements for structural thermal simulation using the volume sweeper.">

.. only:: html

  .. image:: /examples/gallery_examples/gallery/images/thumb/sphx_glr_05_pcb_stacker_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_gallery_05_pcb_stacker.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Mesh a PCB for structural thermal analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Summary: This example demonstrates how to morph a structural hexahedral mesh of a turbine blade to a new deformed shape defined by a target geometry file.">

.. only:: html

  .. image:: /examples/gallery_examples/gallery/images/thumb/sphx_glr_06_blade_morph_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_gallery_06_blade_morph.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Morph a hexahedral mesh of a turbine blade to a new shape</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Summary: This example demonstrates how to mesh a thin solid with hexahedral and prism cells.">

.. only:: html

  .. image:: /examples/gallery_examples/gallery/images/thumb/sphx_glr_07_saddle_bracket_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_gallery_07_saddle_bracket.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Mesh a saddle bracket for a structural analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Summary: This example demonstrates how to generate a mesh for a generic F1 rear wing STL file model.">

.. only:: html

  .. image:: /examples/gallery_examples/gallery/images/thumb/sphx_glr_08_lucid_generic_f1_rear_wing_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_gallery_08_lucid_generic_f1_rear_wing.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Mesh a generic F1 car rear wing for external aero simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Summary: This example demonstrates how to set the base mesh size and number of layers for each solid in a generic PCB geometry and then generate a mesh.">

.. only:: html

  .. image:: /examples/gallery_examples/gallery/images/thumb/sphx_glr_09_multi_layer_quad_mesh_pcb_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_gallery_09_multi_layer_quad_mesh_pcb.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Mesh a generic PCB geometry with multiple hexa layers</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Summary: This example demonstrates how to create a contact patch for use with wrapping to avoid meshing into a narrow contact region between two objects.">

.. only:: html

  .. image:: /examples/gallery_examples/gallery/images/thumb/sphx_glr_10_wheel_ground_contact_patch_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_gallery_10_wheel_ground_contact_patch.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a contact patch for wrapping between a wheel and ground interface</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Summary: This example demonstrates how to mesh a set of solder balls with mainly hexahedral elements. The solder is initially modelled as cylindrical to allow meshing using stacker and then local match morph controls are applied to recover the spherical shapes.">

.. only:: html

  .. image:: /examples/gallery_examples/gallery/images/thumb/sphx_glr_11_solder_ball_thumb.png
    :alt:

  :ref:`sphx_glr_examples_gallery_examples_gallery_11_solder_ball.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Mesh a set of solder balls (beta)</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/gallery_examples/gallery/00_lucid_file_IO
   /examples/gallery_examples/gallery/01_bracket_scaffold
   /examples/gallery_examples/gallery/02_lucid_mixing_elbow
   /examples/gallery_examples/gallery/03_lucid_pipe_tee
   /examples/gallery_examples/gallery/04_lucid_toy_car
   /examples/gallery_examples/gallery/05_pcb_stacker
   /examples/gallery_examples/gallery/06_blade_morph
   /examples/gallery_examples/gallery/07_saddle_bracket
   /examples/gallery_examples/gallery/08_lucid_generic_f1_rear_wing
   /examples/gallery_examples/gallery/09_multi_layer_quad_mesh_pcb
   /examples/gallery_examples/gallery/10_wheel_ground_contact_patch
   /examples/gallery_examples/gallery/11_solder_ball

